--- a/src/app/home/entregas/entregas.component.html
+++ b/src/app/home/entregas/entregas.component.html
@@ -67,7 +67,10 @@
     </tr>
     <tr *ngFor="let item of pedidoSelecionado?.itens; let i = index">
       <td>{{ i + 1 }}</td>
-      <td>{{ item.descricao }}</td>
+      <td>
+        {{ item.descricao }}
+        <div style="font-size: 12px;">{{ item.obs }}</div>
+      </td>
       <td style="text-align: right;">
         {{ item.valorUnitario | currency: "BRL":"symbol":"0.2-2":"pt" }}
       </td>
@@ -257,7 +260,10 @@
         style="border-bottom: 1px solid #ccc;"
       >
         <td style="text-align: center;">{{ i + 1 }}</td>
-        <td>{{ item.descricao }}</td>
+        <td>
+          {{ item.descricao }}
+          <div style="font-size: 12px;">{{ item.obs }}</div>
+        </td>
         <td style="text-align: right; padding-right: 5px;">
           {{ item.valorUnitario | currency: "BRL":"symbol":"0.2-2":"pt" }}
         </td>
@@ -282,7 +288,7 @@
         style="border-bottom: 1px solid #ccc;"
       >
         <td colspan="4">
-          <b>Desconto ({{ pedido.desconto }} %)</b>
+          <b>Desconto</b>
         </td>
         <td style="text-align: right; padding-right: 5px;">
           <b>
