--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,55 +1,104 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" [routerLink]="['/home/inicioHome']">Detalhe</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        
-             
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Cadastro
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" [routerLink]="['/home/cadClinica']">Clínica</a>
-            <a class="dropdown-item" href="#">Dentista</a>
-            <a class="dropdown-item" href="#">Protético</a>
-          </div>
-        </li>
+  <a class="navbar-brand" [routerLink]="['/home/inicioHome']">Detalhe</a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNavDropdown"
+    aria-controls="navbarNavDropdown"
+    aria-expanded="false"
+    aria-label="Alterna navegação"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          href="#"
+          id="navbarDropdownMenuLink"
+          role="button"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          Cadastro
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" [routerLink]="['/home/cadClinica']"
+            >Clínica</a
+          >
+          <a class="dropdown-item" href="#">Dentista</a>
+          <a class="dropdown-item" href="#">Protético</a>
+        </div>
+      </li>
 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Consultas
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" [routerLink]="['/home/consultaPedidos']">Pedidos</a>
-            <a class="dropdown-item" [routerLink]="['/home/consultaEntregas']">Entregas</a>
-            <a class="dropdown-item" [routerLink]="['/home/consultaFechamentos']">Fechamentos</a>
-          </div>
-        </li>
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          href="#"
+          id="navbarDropdownMenuLink"
+          role="button"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          Consultas
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" [routerLink]="['/home/consultaPedidos']"
+            >Pedidos</a
+          >
+          <a class="dropdown-item" [routerLink]="['/home/consultaEntregas']"
+            >Entregas</a
+          >
+          <a class="dropdown-item" [routerLink]="['/home/consultaFechamentos']"
+            >Fechamentos</a
+          >
+        </div>
+      </li>
 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Pedidos
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          href="#"
+          id="navbarDropdownMenuLink"
+          role="button"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          Pedidos
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" [routerLink]="['/home/abrirPedido']"
+            >Abrir Pedido
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" [routerLink]="['/home/abrirPedido']">Abrir Pedido </a>
-            <a class="dropdown-item" [routerLink]="['/home/pedidosEmProcesso']">Pedidos Abertos</a>
-            <a class="dropdown-item" [routerLink]="['/home/entregas']">Entregas</a>
-            <a class="dropdown-item" [routerLink]="['/home/fechamentos']">Fechamentos</a>
-            <a class="dropdown-item" [routerLink]="['/home/statusPedidos']">Status Consolidado</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="logout()">Sair</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <div id='nomeUsuario'><b>Usuário(a)</b>: {{dadosIniciais.nomeUsuario}}</div>
-  <div class="container">
-  <div class="alert alert-info" id='divAguardarDados' style='margin-top:30px'>Aguarde enquanto os dados estão sendo carregados</div> 
-  <router-outlet></router-outlet>
+          <a class="dropdown-item" [routerLink]="['/home/pedidosEmProcesso']"
+            >Pedidos Abertos</a
+          >
+          <a class="dropdown-item" [routerLink]="['/home/entregas']"
+            >Entregas</a
+          >
+          <a class="dropdown-item" [routerLink]="['/home/fechamentos']"
+            >Fechamentos</a
+          >
+          <a class="dropdown-item" [routerLink]="['/home/statusPedidos']"
+            >Status Consolidado</a
+          >
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="logout()">Sair</a>
+      </li>
+    </ul>
   </div>
-  
+</nav>
+<div id="nomeUsuario"><b>Usuário(a)</b>: {{ dadosIniciais.nomeUsuario }}</div>
+<div style="margin-left: 150px; margin-right: 150px;">
+  <div class="alert alert-info" id="divAguardarDados" style="margin-top: 30px;">
+    Aguarde enquanto os dados estão sendo carregados
+  </div>
+  <router-outlet></router-outlet>
+</div>
