relatório de fechamento

--- a/src/app/home/consultas/consulta-pedidos/consulta-pedidos.component.html
+++ b/src/app/home/consultas/consulta-pedidos/consulta-pedidos.component.html
@@ -108,7 +108,7 @@
       >
         <thead>
           <tr>
-            <th colspan="3" scope="col" style="text-align: center;">Id</th>
+            <th colspan="4" scope="col" style="text-align: center;">Id</th>
             <th
               width="15%"
               scope="col"
@@ -173,6 +173,14 @@
               (click)="consultaDetPedidoCliente(pedido.id, content)"
             >
               <i class="material-icons">assignment </i>
+            </td>
+            <td
+              width="5%"
+              style="text-align: center; cursor: pointer;"
+              title="Pedido nº {{ pedido.id }} (Versão de Impressão)"
+              (click)="consultaDetPedidoClienteImp(pedido.id)"
+            >
+              <i class="material-icons">print </i>
             </td>
             <td width="2%">
               <div
@@ -519,5 +527,178 @@
       [nomeClinicaInput]="clinica.nomeSimp"
     >
     </app-nota-fechamento>
+  </div>
+
+  <div id="consultaPedidoImp" style="display: none;">
+    <div
+      style="
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 14px;
+        color: #000099;
+      "
+    >
+      <b>PEDIDO nº {{ pedidoSelecionado.id }} </b>
+    </div>
+    <div class="row">
+      <div class="col-sm-6">
+        <table
+          style="width: 90% !important; margin: auto; font-size: 14px;"
+          class="table table-sm"
+        >
+          <tr>
+            <td width="100" style="border: none !important;">
+              <b>Data Pedido</b>
+            </td>
+            <td style="border: none !important;">
+              {{ pedidoSelecionado.dataPedido | date: "dd/MM/yyyy" }}
+            </td>
+          </tr>
+          <tr>
+            <td style="border: none !important;"><b>Clínica</b></td>
+            <td style="border: none !important;">
+              {{ pedidoSelecionado.clinica }}
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="col-sm-6">
+        <table
+          style="width: 90% !important; margin: auto; font-size: 14px;"
+          class="table table-sm"
+        >
+          <tr>
+            <td style="border: none !important;"><b>Dentista</b></td>
+            <td style="border: none !important;">
+              {{ pedidoSelecionado.dentista }}
+            </td>
+          </tr>
+          <tr>
+            <td style="border: none !important;"><b>Paciente</b></td>
+            <td style="border: none !important;">
+              {{ pedidoSelecionado.nomePaciente }}
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
+
+    <br />
+
+    <table
+      class="table table-bordered table-sm"
+      style="width: 90% !important; margin: auto; font-size: 14px;"
+    >
+      <tr>
+        <td></td>
+        <td style="text-align: center;"><b>Derscrição</b></td>
+        <td style="text-align: center;"><b>Valor Unitário</b></td>
+        <td style="text-align: center;"><b>Qde</b></td>
+        <td style="text-align: center;"><b>Total</b></td>
+      </tr>
+      <tr *ngFor="let item of pedidoSelecionado?.itens; let i = index">
+        <td>{{ i + 1 }}</td>
+        <td>
+          {{ item.descricao }}
+          <div style="font-size: 12px;">{{ item.obs }}</div>
+        </td>
+        <td style="text-align: right;">
+          {{ item.valorUnitario | currency: "BRL":"symbol":"0.2-2":"pt" }}
+        </td>
+        <td style="text-align: center;">{{ item.qde }}</td>
+        <td style="text-align: right;">
+          {{ item.valorTotal | currency: "BRL":"symbol":"0.2-2":"pt" }}
+        </td>
+      </tr>
+      <tr>
+        <td colspan="4"><b>Valor Total</b></td>
+        <td style="text-align: right;">
+          <b>{{
+            pedidoSelecionado.valorTotal | currency: "BRL":"symbol":"0.2-2":"pt"
+          }}</b>
+        </td>
+      </tr>
+
+      <tr></tr>
+      <tr *ngIf="pedidoSelecionado?.desconto > 0">
+        <td colspan="4">
+          <b>Desconto </b>
+        </td>
+        <td style="text-align: right;">
+          <b>{{
+            pedidoSelecionado.valorTotal - pedidoSelecionado.valorLiquido
+              | currency: "BRL":"symbol":"0.2-2":"pt"
+          }}</b>
+        </td>
+      </tr>
+      <tr *ngIf="pedidoSelecionado?.desconto > 0">
+        <td colspan="4"><b>Valor Total Líquido</b></td>
+        <td style="text-align: right;">
+          <b>{{
+            pedidoSelecionado.valorLiquido
+              | currency: "BRL":"symbol":"0.2-2":"pt"
+          }}</b>
+        </td>
+      </tr>
+    </table>
+
+    <br />
+    <div class="row">
+      <div class="col-sm-6">
+        <table
+          style="width: 90% !important; margin: auto; font-size: 14px;"
+          class="table table-sm"
+        >
+          <tr>
+            <td width="100" style="border: none !important;"><b>Prazo</b></td>
+            <td style="border: none !important;">
+              {{ pedidoSelecionado.prazo }} dias corridos
+            </td>
+          </tr>
+          <tr>
+            <td width="100" style="border: none !important;">
+              <b>Previsão</b>
+            </td>
+            <td style="border: none !important;">
+              {{ pedidoSelecionado.dataEntregaPrevista | date: "dd/MM/yyyy" }}
+            </td>
+          </tr>
+          <tr *ngIf="!pedidoSelecionado.obs">
+            <td width="100" style="border: none !important;">
+              <b>Observações</b>
+            </td>
+            <td style="border: none !important;">
+              {{ pedidoSelecionado.obs }}
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="col-sm-6">
+        <table
+          style="width: 90% !important; margin: auto; font-size: 14px;"
+          class="table table-sm"
+        >
+          <tr *ngIf="pedidoSelecionado.desconto > 0">
+            <td style="border: none !important;">
+              <b>Desconto(s) por ítem</b><br />
+              <div
+                *ngFor="let item of itemComDesconto"
+                style="font-size: 11px;"
+              >
+                {{ item.descricao }}:
+                {{ item.desconto | currency: "BRL":"symbol":"0.2-2":"pt" }}
+                x {{ item.qde }} =
+                {{
+                  item.desconto * item.qde
+                    | currency: "BRL":"symbol":"0.2-2":"pt"
+                }}
+              </div>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
+
+    <br />
   </div>
 </div>
